# VGGT-LACT

./: .gitignore  LICENSE  NOTICE  README.md  bench.json  pyproject.toml  requirements.txt
configs/: default.yaml
model/: __init__.py  io_utils.py  lact_block.py  lact_ttt_glu.py  losses.py  ttt_aggregator.py  tttlrm_decoder.py  vggt_ttt.py
pipeline/: __init__.py  input_pipeline.py
scripts/: benchmark_vs_vggt.py  dl3dv_streaming.py  download.py  evaluate_stage1.py  finetune.py  run_inference.py  script_common.py  train_decoder.py  upload_vggt_lact_hf.py
tests/: __init__.py
